Compose list view

--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -40,7 +40,8 @@
     <string name="like">Вподобати</string>
     <string name="comment">Коментар</string>
     <string name="share">Поширити</string>
-    <string name="show_more">Показати більше…</string>
+    <string name="show_more">Показати більше</string>
+    <string name="show_less">Показати менше</string>
     <string name="edit">Редагувати</string>
     <string name="delete">Видалити</string>
     <string name="yes">Так</string>
