--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,5 +224,6 @@
     <string name="from">From</string>
     <string name="title_activity_compose">ComposeActivity</string>
     <string name="title_activity_onboarding">OnboardingActivity</string>
+    <string name="coroutines">Coroutines</string>
 
 </resources>
