--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -45,6 +45,8 @@
     <string name="edit">Редагувати</string>
     <string name="delete">Видалити</string>
     <string name="yes">Так</string>
+    <string name="no">Ні</string>
+    <string name="ok">ОК</string>
     <string name="cancel">Скасувати</string>
     <string name="write_a_comment">Залишити коментар…</string>
     <string name="comment_add_success">Коментар додано</string>
