Connect coroutines with rest api and compose UI

--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -204,5 +204,6 @@
     <string name="from">Від</string>
 
     <string name="coroutines">Корутини</string>
+    <string name="compose">Compose</string>
 
 </resources>
