--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -227,5 +227,6 @@
     <string name="title_activity_compose">ComposeActivity</string>
     <string name="title_activity_onboarding">OnboardingActivity</string>
     <string name="coroutines">Coroutines</string>
+    <string name="compose">Compose</string>
 
 </resources>
