--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -85,6 +85,9 @@
     <string name="not_found">404 Не знайдено</string>
     <string name="invalid_username_or_password">Не вірний логін або пароль</string>
     <string name="verification_code_rule">Код підтвердження повинен складатись з 6 цифр</string>
+    <string name="failed_request_token">Не вдалося отримати маркер запиту</string>
+    <string name="web_view_open_error">Не вдалося відкрити посилання у веб-перегляді</string>
+    <string name="request_token_not_approved">Запит на автентифікацію в Themoviedb не схвалено. Повторіть спробу.</string>
 
     // validations
     <string name="validation.rule.required">Будь ласка, введіть значення</string>
@@ -180,7 +183,7 @@
     <string name="reset_password">Скинути пароль</string>
     <string name="save_new_password">Зберегти новий пароль</string>
     <string name="code">Код з email</string>
-    <string name="no_user_with_email_error">"Користувача %s не знайдено "</string>
+    <string name="no_user_with_email_error">Користувача не знайдено</string>
     <string name="wrong_secure_code_error">Введено неправильний код</string>
     <string name="wrong_password_error">Пароль введено невірно</string>
     <string name="sign_up_hint">У Вас ще немає облікового запису? Ви можете його створити  прямо зараз!</string>
@@ -194,10 +197,11 @@
     <string name="enter_code_timer_finished_clickable">ще раз</string>
     <string name="cancel_password_reset_confirmation_message">Ви впевнені, що хочете скасувати відновлення доступу до облікового запису?</string>
 
-    <string name="sign_up_duplicate_error">User email %s is already taken.</string>
-    <string name="sign_up_password_requires_lower_error">Passwords must have at least one lowercase (\'a\'-\'z\').</string>
-    <string name="sign_up_password_requires_upper_error">Passwords must have at least one uppercase (\'A\'-\'Z\').</string>
-    <string name="sign_up_password_requires_digit_error">Passwords must have at least one digit (\'0\'-\'9\').</string>
+    <string name="sign_up_duplicate_error">Електронна адреса користувача %s уже зайнята.</string>
+    <string name="sign_up_duplicate_error_simple">Електронна адреса користувача вже зайнята.</string>
+    <string name="sign_up_password_requires_lower_error">Паролі повинні містити принаймні одну нижню літеру (\'a\'-\'z\').</string>
+    <string name="sign_up_password_requires_upper_error">Паролі повинні містити принаймні один верхній регістр (\'A\'-\'Z\').</string>
+    <string name="sign_up_password_requires_digit_error">Паролі повинні містити принаймні одну цифру (\'0\'-\'9\').</string>
     <string name="settings_terms_and_conditions">Положення &amp; умови</string>
     <string name="settings_privacy_policy">Політика конфіденційності</string>
     <string name="settings_app_version">Версія програми</string>
