--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="send_secure_code_to_email">Send code to email</string>
     <string name="reset_password">Reset password</string>
     <string name="save_new_password">Save new password</string>
-    <string name="no_user_with_email_error">User %s not found</string>
+    <string name="no_user_with_email_error">User not found</string>
     <string name="wrong_secure_code_error">Wrong secure code</string>
     <string name="wrong_password_error">Wrong password</string>
     <string name="sign_up_hint">You have no account? You can create it right now!</string>
@@ -114,6 +114,9 @@
     <string name="not_found">404 Not Found</string>
     <string name="invalid_username_or_password">Іnvalid username or password</string>
     <string name="verification_code_rule">The verification code must consist of 6 digits</string>
+    <string name="failed_request_token">Failed getting request Token</string>
+    <string name="web_view_open_error">Couldn\'t open link %s in webview</string>
+    <string name="request_token_not_approved">Authentication request into Themoviedb not approved.Please try again.</string>
 
     // validations
     <string name="validation.rule.required">Please enter a value</string>
@@ -219,6 +222,7 @@
     <string name="language_key_ru" translatable="false">RU</string>
 
     <string name="sign_up_duplicate_error">User email %s is already taken.</string>
+    <string name="sign_up_duplicate_error_simple">User email is already taken.</string>
     <string name="sign_up_password_requires_lower_error">Passwords must have at least one lowercase (\'a\'-\'z\').</string>
     <string name="sign_up_password_requires_upper_error">Passwords must have at least one uppercase (\'A\'-\'Z\').</string>
     <string name="sign_up_password_requires_digit_error">Passwords must have at least one digit (\'0\'-\'9\').</string>
