--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,7 @@
     <string name="validation.rule.minLength">Please enter %d or more character</string>
     <string name="validation.rule.minMaxLength" formatted="false">Please enter a value between %1$d and %2$d</string>
     <string name="validation.rule.email">Please enter a proper email</string>
+    <string name="validation.rule.phone">Please enter a valid phone number</string>
     <string name="validation.rule.password">Please enter a valid password (from 6 to 64 characters) Password must contain a number, small and large latin letters</string>
     <string name="validation.rule.firstName">The First Name must be at least 2 and at max 64 characters long</string>
     <string name="validation.rule.lastName">The Last Name must be at least 2 and at max 64 characters long</string>
@@ -130,6 +131,7 @@
     <string name="validation.rule.invalidCharacter" formatted="false">You\'ve entered an invalid character %s</string>
     <string name="validation.rule.minDouble" formatted="false">Please enter a value of %s or more</string>
     <string name="validation.rule.maxDouble" formatted="false">Please enter a value of %s or less</string>
+    <string name="validation.rule.date">Please select correct date</string>
 
     <!--    ???-->
 
@@ -158,6 +160,7 @@
     <string name="surname_label">Surname</string>
     <string name="email_label">E-Mail</string>
     <string name="phone_label">Phone</string>
+    <string name="phone_number">Phone number</string>
     <string name="working_now">Working now</string>
     <string name="attachment_label">Attachment</string>
     <string name="name_error">Please enter your name</string>
