--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="enter_code_timer_finished_clickable">again</string>
     <string name="setup_new_password_hint">Choose a new password</string>
     <string name="cancel_password_reset_confirmation_message">Are you sure you want to cancel account recovery?</string>
+    <string name="wrong_old_password_error">Wrong old password</string>
 
     <string name="type">Type</string>
     <string name="facebook">Facebook</string>
