setup app color and design

--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Рекомендації</string>
+    <string name="app_name">Template</string>
     <string name="none">none</string>
     <string name="translation_key">uk</string>
     <string name="no_permission_error">Потрібно надати доступ щоб продовжити</string>
