update gradle, kotlin, libs, migrate to apply plugins by dsl approach, fix app icon, fix multiple open movie details, reimplement full image viewer

--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -30,6 +30,7 @@
 
     <!--    Profile-->
     <string name="profile">Профіль</string>
+    <string name="profile_cover">Обкладинка профілю</string>
 
     <string name="male">Чоловік</string>
     <string name="female">Жінка</string>
