--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
 
     <!--    Profile-->
     <string name="profile">Profile</string>
+    <string name="profile_cover">Profile cover</string>
     <string name="upload_avatar">Upload Avatar</string>
     <string name="profile_avatar">Profile avatar</string>
 
