--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,5 +1,5 @@
-Task              : Update gradle
-Description       : Update gradle version, kotlin version, replace deprecated code, update libs, change apply plugins by DLS approach, fix multiply opening MovieDetails, migrate from showFragment to navigation, reimplement full image viewer, fix navigate back when open left menu.  
+Task              : Fix profile settings button loading state
+Description       : Fix profile settings button during loading state button moved from center to start
 Version           : 3.3
 Author            : Vadym Popovych
 Support	          : vadympopovychn24@gmail.com
